Fixed adding comment on Shift+enter press. And added work with tags on Photo page.

--- a/BinaryStudio.PhotoGallery.Web/Content/photo-page.css
+++ b/BinaryStudio.PhotoGallery.Web/Content/photo-page.css
@@ -301,3 +301,14 @@
 #leftSideMenu .btn-group {
 	display: block;
 }
+
+.title {
+	font-family: "Segoe UI Light", "Segoe UI Web Light", "Segoe UI Web Regular", "Segoe UI", "Segoe UI Symbol", "HelveticaNeue-Light", "Helvetica Neue", Arial, sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 40px;
+}
+
+#editable {
+	margin-right: 15px;
+}
